added the themes

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <section id="services" class="services">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Our Catering Services</h2>
+          <h2 class="section-title catering-service">Our Catering Services</h2>
           <p class="section-description">
             Whatever the occasion, we have the perfect catering solution to make
             your event exceptional and stress-free
@@ -349,7 +349,7 @@
     <section id="menu" class="menu">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Our Signature Pizzas</h2>
+          <h2 class="section-title signature">Our Signature Pizzas</h2>
           <p class="section-description">
             Handcrafted with the finest ingredients and baked to perfection in
             our wood-fired ovens
@@ -489,7 +489,7 @@
     <section id="gallery" class="gallery">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Our Culinary Artistry</h2>
+          <h2 class="section-title culinary-artistry">Our Culinary Artistry</h2>
           <p class="section-description">
             A glimpse into our kitchen where passion meets perfection, creating
             memorable moments one pizza at a time
@@ -567,7 +567,7 @@
     <section id="contact" class="contact">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Let's Plan Your Perfect Event</h2>
+          <h2 class="section-title event">Let's Plan Your Perfect Event</h2>
           <p class="section-description">
             Ready to make your event unforgettable? Get in touch with us for a
             personalized quote and let's create something amazing together
